@@ -88,12 +88,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   * mod_ssl: Add SSLCompression directive.
-     trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1345319 and 
-                  http://svn.apache.org/viewvc?view=revision&revision=1348656
-     2.4.x patch: http://people.apache.org/~rjung/patches/ssl-compression-directive-2_4.patch
-     +1: rjung, sf, trawick
-     note: fix httpd compatibility info in docs when backporting
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
